--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-	"manifest_version": 2,
-	"name": "Selenium Page Object",
+	"manifest_version": 3,
+	"name": "Anyang Tool",
 	"version": "1.0",
-	"description": "PBWM Automation Tool",
+	"description": "安扬的工具",
 	"author": "Stehen Y An",
 	"icons":
 	{
 		"48": "icon.png",
 		"128": "icon.png"
 	},
-	"browser_action": 
+	"action": 
 	{
 		"default_icon": "icon.png",
 		"default_popup": "popup.html"
@@ -18,9 +18,8 @@
 	[
 		{
 			"matches": ["<all_urls>"],
-			"js": ["js/jquery-1.8.3.js","js/content-script.js"],
-			"css": ["css/custom.css"],
-			"run_at": "document_end"
+			"js": ["js/jquery.js","js/content-script.js"],
+			"css": ["css/custom.css"],"run_at": "document_end"
 		}
 	],"permissions":
 	[
@@ -28,9 +27,6 @@
 		"tabs", // 标签
 		"notifications", // 通知
 		"webRequest", // web请求
-		"webRequestBlocking", // 阻塞式web请求
-		"storage", // 插件本地存储
-		"http://*/*", // 可以通过executeScript或者insertCSS访问的网站
-		"https://*/*" // 可以通过executeScript或者insertCSS访问的网站
+		"storage" // 插件本地存储
 	]
 }
